finaldaypreparation/q1/networkpolicy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: mynetworkpolicy
spec:
  podSelector:
    matchLabels:
     app: mypod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: web
    ports:
    - port: 80
  - from:
      - podSelector:
          matchLabels:
            app: store
    ports:
    - port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: web
    ports:
    - port: 80
  - to:
    - podSelector:
        matchLabels:
          app: store
    ports:
    - port: 80
